# miniFE

./: README.FIRST
.github/workflows/: linux-compileonly.yml  linux-nightly.yml  linux.yml
kokkos/: CMakeLists.txt  README.md
kokkos/common/: CMakeLists.txt  YAML_Doc.cpp
kokkos/fem/: CMakeLists.txt  verify_solution.hpp
kokkos/kokkos/linalg/src/: CMakeLists.txt  Kokkos_CrsMatrix.hpp
kokkos/src/: CMakeLists.txt  CSRMatrix.hpp  MatrixInitOp.hpp  Minife_Kokkos_Vector.hpp  SparseMatrix_functions.hpp  Vector.hpp  cg_solve.hpp  driver.hpp  exchange_externals.hpp  generate_matrix_structure.hpp  main.cpp  make_local_matrix.hpp
kokkos/utils/: CMakeLists.txt  compute_matrix_stats.hpp
